# voice-io

./: .gitignore  CHANGELOG.md  Dockerfile  FEATURES.md  LICENSE  README.md  compose.yml  config.example.toml  pyproject.toml  requirements.txt
doc/: concept_voice_claude.md
py-voice/: CHANGELOG.md  README.md  pyproject.toml
py-voice/tests/: test_voice_input.py
py-voice/voice_input/: __init__.py  __main__.py  audio.py  detection.py  pipeline.py  transcription.py
scripts/: dev.sh  run.sh  setup.sh  venv-run.sh
src/voice_io/: __init__.py  api.py  cleanup.py  cli.py  config.py  daemon.py  glossary.py  macros.py  recorder.py  transcriber.py  wakeword.py  watcher.py
src/voice_io/static/: app.js  index.html  style.css
tests/: test_config.py  test_daemon.py  test_recorder.py  test_transcriber.py  test_wakeword.py
