[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-io"
version = "0.9.0"
description = "Local voice recording and transcription service. Whisper-powered, self-hosted, no cloud."
license = "MIT"
authors = [{name = "cuber IT service"}]
keywords = ["whisper", "transcription", "voice", "speech-to-text", "self-hosted"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/cuber-it/voice-io"
dependencies = [
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "numpy>=1.24",
    "faster-whisper>=1.0",
    "typer>=0.12",
    "rich>=13",
    "openwakeword>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]
api = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.scripts]
voice-io = "voice_io.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["voice_io*"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
