[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "voice-input"
version         = "0.1.0"
description     = "Embeddable voice input library. Wake-word detection + Whisper transcription. Zero cloud."
license         = { text = "MIT" }
authors         = [{ name = "cuber IT service" }]
requires-python = ">=3.11"
keywords        = ["whisper", "voice", "speech-to-text", "wakeword", "voice-input", "faster-whisper"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.24",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "faster-whisper>=1.0",
    "openwakeword>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.urls]
Homepage   = "https://github.com/cuber-it/voice-io"
Repository = "https://github.com/cuber-it/voice-io"

[project.scripts]
voice-input = "voice_input.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["voice_input"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
